--- a/list-hoc-sinh.html
+++ b/list-hoc-sinh.html
@@ -7,6 +7,7 @@
 </head>
 <body>
 <table width="500px" border="2px" cellpadding="3px" cellspacing="0">
+    <caption><h2>List hoc sinh</h2></caption>
     <thead>
         <tr>
             <td>STT</td>
